# public/swagger.json
@@ -296,6 +296,22 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"checkUserMsgReq": {
+				"properties": {
+					"userId": {
+						"type": "string"
+					},
+					"messageBody": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"userId",
+					"messageBody"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"SaveMessageRes": {
 				"properties": {
 					"groupId": {
@@ -664,6 +680,39 @@
 						"application/json": {
 							"schema": {
 								"$ref": "#/components/schemas/CheckMsgReqGroup"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/group/userMsgs": {
+			"post": {
+				"operationId": "UserMessage",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"group"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/checkUserMsgReq"
 							}
 						}
 					}
